// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon component should match a snapshot 1`] = `
<span
  className="icon-container"
  style={
    Object {
      "color": undefined,
      "fontSize": undefined,
    }
  }
>
  <_default />
</span>
`;

exports[`Icon component should match a snapshot when color prop is supplied 1`] = `
<span
  className="icon-container"
  style={
    Object {
      "color": "red",
      "fontSize": undefined,
    }
  }
>
  <_default />
</span>
`;

exports[`Icon component should render nothing if invalid icon prop is supplied 1`] = `""`;
